[project]
name = "learning-dl"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cognitive-face>=1.5.0",
    "jieba>=0.42.1",
    "matplotlib>=3.11.0",
    "nltk>=3.10.0",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "tensorflow>=2.21.0",
]
